--- a/public/stylnav.css
+++ b/public/stylnav.css
@@ -1,5 +1,6 @@
 nav {background-color: #E2E2E2;
-    font-family: 'Menco', sans-serif !important;}
+    font-family: 'Menco', sans-serif !important;
+    }
 nav li a {  text-decoration: none !important; 
        color:#000000 !important; }
 nav li a:hover,#ShowLess:hover{
